--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="imgs-div">
           <img src="./images/vector.svg" alt="vector-img" class="vector-img" />
           <img src="./images/vector-dot.svg" alt="vector-dot"class="vector-dot" />
-          <img src="./images/intro-img.svg" alt="intro-img" />
+          <img src="./images/intro-img.svg" alt="intro-img" class="intro-img" />
         </div>
       </div>
     </div>
